fix: removed covid questionnaire refs
